<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="div">&#247;</string>
    <string name="mult">&#215;</string>
    <string name="minus">&#8211;</string>
    <string name="plus_or_minus">&#177;</string>
    <string name="_10_sup_x">10&#739;</string>
    <string name="engeneer_mode">Переключиться на обычный вид</string>
    <string name="normal_mode">Переключиться на инженерный вид</string>
    <string name="inv">Inv</string>
    <string name="in">In</string>
    <string name="bkt_left">(</string>
    <string name="bkt_right">)</string>
    <string name="intg">Int</string>
    <string name="sinh">sinh</string>
    <string name="sin">sin</string>
    <string name="x_178">x²</string>
    <string name="factorial">n!</string>
    <string name="dms">dms</string>
    <string name="cosh">cosh</string>
    <string name="cos">cos</string>
    <string name="_8730_x">√x</string>
    <string name="xy">x&#696;</string>
    <string name="_960">π</string>
    <string name="tanh">tanh</string>
    <string name="tan">tan</string>
    <string name="x_179">x³</string>
    <string name="f_e">F-E</string>
    <string name="exp">Exp</string>
    <string name="mod">Mod</string>
    <string name="log">log</string>
    <string name="_8731_x">∛x</string>
</resources>